2009-05-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/accept4.c: Include kernel-features.h.
	(accept4): If __NR_accept4 is not defined, but __NR_socketcall
	is, either do nothing at all if __ASSUME_ACCEPT4, or
	call __internal_accept4 and handle EINVAL -> ENOSYS translation.
	* sysdeps/unix/sysv/linux/internal_accept4.S: New file.
	* sysdeps/unix/sysv/linux/i386/accept4.S (SOCKOP_accept4): Don't
	define.
	* sysdeps/unix/sysv/linux/i386/internal_accept4.S: New file.
	* sysdeps/unix/sysv/linux/Makefile (sysdep-routines): Add
	internal_accept4 in socket directory.

2009-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/ia64/configure.in: New file.

2009-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #10162]
	* sysdeps/ia64/memchr.S: Use speculative load.

	* sysdeps/unix/sysv/linux/ia64/____longjmp_chk.S: New file.
	* sysdeps/unix/sysv/linux/ia64/__longjmp.S: If CHECK_RSP is defined,
	use it.

	* sysdeps/i386/__longjmp.S: Add .text.
	* sysdeps/x86_64/__longjmp.S: Likewise.

2009-05-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Don't define
	__ASSUME_ACCEPT4 for IA-64.

2009-05-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/accept4.c (__NR_accept4): Don't define.

	* sysdeps/unix/sysv/linux/socketcall.h (SOCKOP_paccept): Remove.
	(SOCKOP_accept4): Define.

2009-05-20  Ulrich Drepper  <drepper@redhat.com>

	Sun approved the change of the license.
	* sunrpc/auth_des.c: Replace license text.
	* sunrpc/auth_none.c: Likewise.
	* sunrpc/auth_unix.c: Likewise.
	* sunrpc/authdes_prot.c: Likewise.
	* sunrpc/authuxprot.c: Likewise.
	* sunrpc/bindrsvprt.c: Likewise.
	* sunrpc/clnt_gen.c: Likewise.
	* sunrpc/clnt_perr.c: Likewise.
	* sunrpc/clnt_raw.c: Likewise.
	* sunrpc/clnt_simp.c: Likewise.
	* sunrpc/clnt_tcp.c: Likewise.
	* sunrpc/clnt_udp.c: Likewise.
	* sunrpc/clnt_unix.c: Likewise.
	* sunrpc/des_crypt.c: Likewise.
	* sunrpc/des_soft.c: Likewise.
	* sunrpc/get_myaddr.c: Likewise.